--- a/human-computer-interface/project-calendar/src/sass/major.scss
+++ b/human-computer-interface/project-calendar/src/sass/major.scss
@@ -1,5 +1,11 @@
 /**
+ * #UTILS
+ */
+
+ @import "_utils/utils_lib.scss";
+
+ /**
  * #COMPONENTS
  */
 
- @import "_components/components_home.scss";
+ // @import "_components/components_home.scss";
